# opshin-starter-kit

./: .gitignore  LICENSE  README.md  address_generator.py  address_utxos.py  execute_transaction.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: build.py
src/off_chain/: build.py  collect_bitwise.py  collect_vest.py  distribute.py  init_bitwise.py  make_vest.py  ogmios.py
src/on_chain/: bitwise.py  gift.py  vesting.py
src/utils/: __init__.py  contracts.py  keys.py  network.py
tests/on_chain/: test_compile.py  test_contract.py
