[tool.poetry]
name = "opshin-starter-kit"
version = "0.1.0"
description = "A starter kit introduction into writing and interacting with Smart Contracts on Cardano through Python"
authors = ["Niels Mündler <n.muendler@posteo.de>", "Julius Frost <33183774+juliusfrost@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
opshin = "^0.16.1"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
