[project]
name = "opshin-starter-kit"
version = "0.1.0"
description = "A starter kit introduction into writing and interacting with Smart Contracts on Cardano through Python"
authors = [
    { name = "Niels Mündler", email = "n.muendler@posteo.de" },
    { name = "Julius Frost", email = "33183774+juliusfrost@users.noreply.github.com" },
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "opshin>=0.25.0",
    "pluthon>=1.3.1",
    "click>=8.1.7",
]

[dependency-groups]
dev = ["pytest>=7.2.2"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[tool.uv.sources]
opshin = { git = "https://github.com/OpShin/opshin.git" , branch="feat/plutus-v3"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
